# lesta-course-homework

./: .clang-format  .gitignore  README.md
.github/workflows/: Ubuntu.yml  macOS.yml  win.yml
02_sdl_dynamic/: CMakeLists.txt  test.sh
02_sdl_dynamic/src/: main.cpp
02_sdl_dynamic/test/: pytest.py
02_sdl_static/: CMakeLists.txt  test.sh
02_sdl_static/src/: main.cpp
03_0_sdl_input_buttons/: CMakeLists.txt
03_0_sdl_input_buttons/src/: main.cpp
03_1_sdl_loop_to_engine/: CMakeLists.txt
03_1_sdl_loop_to_engine/src/: engine.cxx  engine.hxx
03_2_sdl_loop_to_engine_dll/: CMakeLists.txt
03_2_sdl_loop_to_engine_dll/src/: engine.hxx  main.cpp
03_3_sdl_loop_hot_reload/: CMakeLists.txt
03_3_sdl_loop_hot_reload/src/: engine.cxx  engine.hxx  game.cxx
04_homework/04_00_canvas/: CMakeLists.txt
04_homework/04_00_canvas/include/: canvas.hxx
04_homework/04_00_canvas/src/: canvas_main.cpp
04_homework/04_01_line_render/: CMakeLists.txt
04_homework/04_01_line_render/include/: line_render.hxx
04_homework/04_01_line_render/src/: line_render_main.cxx
04_homework/04_02_triangle_render/: CMakeLists.txt
04_homework/04_02_triangle_render/include/: canvas.hxx  gfx.hxx  line_render.hxx  triangle_indexed.hxx  triangle_interpolated.hxx  triangle_render.hxx
04_homework/04_02_triangle_render/src/: gfx_render.cxx
hello_world_1/: CMakeLists.txt  main.cpp
hello_world_2/: CMakeLists.txt
hello_world_2/hello_bin/: CMakeLists.txt
hello_world_2/hello_bin/src/: main.cpp
hello_world_2/hello_lib/: CMakeLists.txt
hello_world_2/hello_lib/include/: hello_world.h
hello_world_2/hello_lib/src/: hello_world.cpp
